# AlphaLab

./: .env.example  .gitignore  AGENTS.md  AlphaLab.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  OPERATIONS.md  README.md  RELEASE.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agents/: README.md  implementer.md  qa.md  release.md  reviewer.md
alphalab/: README.md  __init__.py  cli.py
alphalab/api/: __init__.py  app.py  jobs.py  main.py  schemas.py
alphalab/configs/: example.yaml
alphalab/core/: __init__.py  config.py
alphalab/core/backtest/: __init__.py  engine.py  metrics.py  types.py
alphalab/core/data/: __init__.py  base.py  cache.py  eodhd_provider.py
alphalab/core/experiments/: __init__.py  store.py
alphalab/core/research/: __init__.py  robustness.py  strategy.py
alphalab/core/services/: __init__.py  research_service.py
alphalab/core/utils/: __init__.py  env.py  errors.py  logging.py  manifest.py  plotting.py
alphalab/strategies/examples/: __init__.py  trend_following.py
alphalab/tests/: helpers.py  test_api_integration.py  test_api_jobs.py  test_api_main.py  test_backtest_pnl.py  test_cache_integration.py  test_cli_failures.py  test_cli_integration.py  test_cost_model.py  test_drawdown.py  test_eodhd_provider.py  test_experiment_store.py  test_manifest.py  test_robustness.py  test_turnover.py
alphalab/web/: index.html
alphalab/web/assets/: app.css  app.js
